chore: update dependencies and add license information
- Updated `opik` from `^0.12.0` to `^1.9.98` in `rein-backend/package.json`.
- Added `ignoreDeprecations` option in `rein-backend/tsconfig.json`.
- Updated `@radix-ui/react-context` from `1.1.2` to `1.1.3` in `rein-frontend/package-lock.json`.
- Removed duplicate `@radix-ui/react-context` entry in `rein-frontend/package-lock.json`.
- Added license information for various packages in `rein-frontend/package-lock.json`.
- Updated multiple packages in `rein-frontend/package-lock.json` to their latest versions.

--- a/rein-backend/tsconfig.json
+++ b/rein-backend/tsconfig.json
@@ -20,7 +20,8 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "ignoreDeprecations": "6.0"
   },
   "exclude": [
     "node_modules/@sinclair/typebox/build/cjs/type/type/index.d.ts"
