--- a/rein-backend/package.json
+++ b/rein-backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.19.2",
     "@supabase/supabase-js": "^2.91.1",
+    "axios": "^1.13.4",
     "googleapis": "^170.1.0",
     "ioredis": "^5.9.2",
     "opik": "^1.9.100",
