--- a/rein-frontend/package.json
+++ b/rein-frontend/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.38.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
